2016-03-04  Peter Stephenson  <p.stephenson@samsung.com>

	* 38084: Baruch Siach: configure.ac: use the pcre-config we
	found earlier for determining libs.

2016-03-03  Barton E. Schaefer  <schaefer@zsh.org>

	* 38048: Src/zle_refresh.c: fix "zle redisplay" when called while
	a listing is below the prompt (e.g., from interrupt handler)

	* 38039: Src/options.c: POSIXy behavior for "set +o"

2016-02-26  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Stephane: 38020: fix problems with fractions of a second in
	$SECONDS.

2016-02-25  Peter Stephenson  <p.stephenson@samsung.com>

	* 38024: Src/signals.c, Test/C03traps.ztst: improve 37999 to
	allow nested zsh-mode EXIT traps not to remove a POSIX EXIT
	trap.

2016-02-19  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Etc/completion-style-guide: Clarify the term "variant".

2016-02-17  Peter Stephenson  <p.stephenson@samsung.com>

	* 37999: README, Src/signals.c, Test/C03traps.ztst: Make
	POSIX-style EXIT traps behave according to POSIX_TRAPS at
	the point where the trap is set.

2016-02-16  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* users/21256 + workers/37965: Doc/Zsh/contrib.yo,
	Doc/Zsh/mod_mathfunc.yo, Src/zsh.mdd: New math functions
	min(), max(), sum(), provided by a new autoloadable function
	'zmathfunc'.

2016-02-16  Barton E. Schaefer  <schaefer@zsh.org>

	* 38001: Src/Zle/zle_refresh.c: clear-screen re-expands prompts

	* 37988: Src/params.c: $0 becomes read-only under POSIXARGZERO

2016-02-15  Eric Cook  <llua@gmx.com>

	* 37975: Completion/Unix/Command/_php: allow completion after
	the first non-option argument.

2016-02-14  Barton E. Schaefer  <schaefer@zsh.org>

	* 37898: Completion/compinstall: fix typo in completer menu

	* 37898: Completion/Unix/Command/_gcc: complete linker options

	* 37972: Completion/Base/Utility/_arguments,
	Completion/Base/Widget/_correct_filename,
	Completion/Base/Widget/_most_recent_file,
	Completion/Unix/Command/_devtodo, Completion/Unix/Command/_make,